--- a/config.cfg
+++ b/config.cfg
@@ -1,9 +1,9 @@
 [git]
-repository: /home/lenin/python/git-push-notify
-branch: origin/master
+repository: /home/fisher/workspace/housing
+branch: origin/work
 
 [daemon]
-timeout: 30
+timeout: 60
 
 [notify]
 useNotifySend: true
