--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [git]
-repository: /home/fisher/workspace/housing
-branch: origin/work
+repository: /home/lenin/python/gitPushNotify
+branch: origin/master
 
 [daemon]
 timeout: 60
